applications/calibre-web/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: calibre-web
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("calibre.joshaconnor.duckdns.org")
      kind: Rule
      services:
        - name: calibre-web
          port: 8083
